udpate front page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,7 +32,7 @@ website:
         href: https://github.com/RohanAlexander
       - icon: twitter
         href: https://twitter.com/RohanAlexander
-      - icon: email
+      - icon: envelope
         href: rohan.alexander@utoronto.ca
 
 format:
