--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,7 +38,7 @@ website:
       - icon: twitter
         href: https://twitter.com/RohanAlexander
       - icon: envelope
-        href: rohan.alexander@utoronto.ca
+        href: "mailto:rohan.alexander@utoronto.ca"
 
 format:
   html:
